add mouse event

--- a/src/server/server.ui
+++ b/src/server/server.ui
@@ -23,7 +23,7 @@
     </rect>
    </property>
    <property name="text">
-    <string>TextLabel</string>
+    <string>TestForm</string>
    </property>
   </widget>
  </widget>
