--- a/src/server/server.ui
+++ b/src/server/server.ui
@@ -16,11 +16,16 @@
   <widget class="QLabel" name="label">
    <property name="geometry">
     <rect>
-     <x>140</x>
-     <y>190</y>
-     <width>71</width>
-     <height>41</height>
+     <x>130</x>
+     <y>110</y>
+     <width>141</width>
+     <height>91</height>
     </rect>
+   </property>
+   <property name="font">
+    <font>
+     <pointsize>22</pointsize>
+    </font>
    </property>
    <property name="text">
     <string>TestForm</string>
